--- a/html从零开始/one/First study/demo1/1.html
+++ b/html从零开始/one/First study/demo1/1.html
@@ -5,10 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      div {
+        width: 200px;
+        height: 200px;
+      }
+
+      .red {
+        background-color: red;
+      }
+
+      .blue {
+        background-color: blue;
+      }
+    </style>
   </head>
 
   <body>
-
+    <div class="red"></div>
+    <div class="blue"></div>
+    <div class="red"></div>
   </body>
 
 </html>
